Fixed logo on mobile

--- a/projects.css
+++ b/projects.css
@@ -241,6 +241,13 @@ footer {
 
 @media only screen and (max-width: 520px) {
 
+  .logo {
+    height: 40px;
+    width: auto;
+    margin-top: 17px;
+    margin-left: 30px;
+  }
+
   .nav_about {
     margin-right: 30px;
   }
